--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "members-only",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
+    "serverstart": "DEBUG=members-only:* npm run devstart"
   },
   "keywords": [],
   "author": "",
