--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
+    "ejs-lint": "^2.0.0",
     "eslint": "^8.55.0",
     "nodemon": "^3.0.2"
   }
